# Distributed-Database-in-C-

./: CMakeLists.txt  README.md  main.cpp
data-loader/: CMakeLists.txt
query-tree-scheduler/include/: json.hpp
query-tree-scheduler/src/: base64.cpp
sql-processor/: CMakeLists.txt  SQLProcessor.h  SQLSelectProcessor.cpp
utils/: utils.h
